--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,31 +1,4 @@
-<style>
-	
-	.grid-container {
-		display: grid;
-		margin: auto;  
-		height: 800px; 
-	}
-
-	.grid-item {
-		font-size: 16px;
-		text-align: center;
-	}
-
-	.grid-item h2 {
-		font-size: 40px;
-	}
-
-	.grid-item a {
-		color: black;
-		text-decoration: none;
-	}
-
-	.grid-item a:hover {
-		color: black;
-		text-decoration: underline;
-	}
-</style>
-
+<link href="/categories.css" rel="stylesheet" type="text/css">
 
 <html>
 	
