Fix navbar and footer

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,10 +1,3 @@
-<style>
-	
-	
-	
-	
-	</style>
-	
 <html>
 	
 	<%- include('./partials/header.ejs') %>
@@ -14,16 +7,14 @@
 	   
 		<br>
 
-		<div class="deal">
-			<div class="deal_of_the_day">
-				<h3>AMAZING DEAL ENDS IN:</h3>
-				<h1><p id="demo"></p></h1>
-				
-			</div>
+		<div style="padding:0 16px;">
+			<h2>Responsive Topnav Example</h2>
+			<p>This example use media queries to stack the topnav vertically when the screen size is 600px or less.</p>
+			<p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
+			<h4>Resize the browser window to see the effect.</h4>
 
-			<img src="https://img.joomcdn.net/5fe8ab30cbfdaa8c063436145a0e6352d761f828_original.jpeg">
-
-		</div>
+			<img src="https://images.vans.com/is/image/VansEU/VN0A3WMAVNE-HERO?$PDP-FULL-IMAGE$">
+		  </div>
 
 		<br><br>
 
@@ -32,8 +23,8 @@
 			
 			<ul class="shelf-with-offers">
 				<li class="shelf-item">
-					<a title="Nike Ανδρικά Παπούτσια για Τρέξιμο Downshifter 9 AQ7481-002" href="https://www.intersport.gr/andrika/papoutsia/treximo/nike-andrika-papoutsia-gia-treximo-downshifter-9_621786/">
-						<img src="https://intersport.lhscdn.com/uploads/resources/190117/image-enlarge.jpg?lm=4090C2F534EAA90C8D7C97874A31A6E4">
+					<a title="Nike Ανδρικά Παπούτσια για Τρέξιμο Downshifter 9 AQ7481-002" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.adidas.gr%2Fgazelle-shoes%2FBB5476.html&psig=AOvVaw29J6418yMkMHkjDcawwDRD&ust=1679046517059000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCIiO0e2V4P0CFQAAAAAdAAAAABAD">
+						<img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/61f87dec481e4512823ea7fb0080ba1a_9366/Gazelle_Shoes_Mayro_BB5476_01_standard.jpg">
 						
 						<div class="container">
 							<p>Nike Ανδρικά Παπούτσια για Τρέξιμο Downshifter 9 AQ7481-002</p>
@@ -42,9 +33,9 @@
 				</li>
 
 				<li class="shelf-item">
-					<a title="Nike Ανδρικά Παπούτσια για ΟΧΙ Τρέξιμο Downshifter 9 AQ7481-002" href="https://www.intersport.gr/andrika/papoutsia/treximo/nike-andrika-papoutsia-gia-treximo-downshifter-9_621786/">
-						<img src="https://intersport.lhscdn.com/uploads/resources/190117/image-enlarge.jpg?lm=4090C2F534EAA90C8D7C97874A31A6E4">
-
+					<a title="Nike Ανδρικά Παπούτσια για Τρέξιμο Downshifter 9 AQ7481-002" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.adidas.gr%2Fgazelle-shoes%2FBB5476.html&psig=AOvVaw29J6418yMkMHkjDcawwDRD&ust=1679046517059000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCIiO0e2V4P0CFQAAAAAdAAAAABAD">
+						<img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/61f87dec481e4512823ea7fb0080ba1a_9366/Gazelle_Shoes_Mayro_BB5476_01_standard.jpg">
+						
 						<div class="container">
 							<p>Nike Ανδρικά Παπούτσια για Τρέξιμο Downshifter 9 AQ7481-002</p>
 						</div>
@@ -52,50 +43,53 @@
 				</li>
 
 				<li class="shelf-item">
-					<a title="Nike Ανδρικά Παπούτσια για Βουνό Downshifter 9 AQ7481-002" href="https://www.intersport.gr/andrika/papoutsia/treximo/nike-andrika-papoutsia-gia-treximo-downshifter-9_621786/">
-						<img src="https://intersport.lhscdn.com/uploads/resources/190117/image-enlarge.jpg?lm=4090C2F534EAA90C8D7C97874A31A6E4">
+					<a title="Nike Ανδρικά Παπούτσια για Τρέξιμο Downshifter 9 AQ7481-002" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.adidas.gr%2Fgazelle-shoes%2FBB5476.html&psig=AOvVaw29J6418yMkMHkjDcawwDRD&ust=1679046517059000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCIiO0e2V4P0CFQAAAAAdAAAAABAD">
+						<img src="https://assets.adidas.com/images/h_840,f_auto,q_auto,fl_lossy,c_fill,g_auto/61f87dec481e4512823ea7fb0080ba1a_9366/Gazelle_Shoes_Mayro_BB5476_01_standard.jpg">
+						
+						<div class="container">
+							<p>Nike Ανδρικά Παπούτσια για Τρέξιμο Downshifter 9 AQ7481-002</p>
+						</div>
 					</a>
 				</li>
 			</ul>    
 			
 		</div>
 
-	<script>
-		// Set the date we're counting down to
-		//var countDownDate = new Date("Jan 5, 2022 15:37:25").getTime();
-		const today = new Date()
-		const tomorrow = new Date(today)
-		tomorrow.setDate(tomorrow.getDate() + 1)
-		tomorrow.setHours(0,0,0,0);
-		var countDownDate = tomorrow;
+		<!-- <script>
+			// Set the date we're counting down to
+			//var countDownDate = new Date("Jan 5, 2022 15:37:25").getTime();
+			const today = new Date()
+			const tomorrow = new Date(today)
+			tomorrow.setDate(tomorrow.getDate() + 1)
+			tomorrow.setHours(0,0,0,0);
+			var countDownDate = tomorrow;
 
-		// Update the count down every 1 second
-		var x = setInterval(function() {
+			// Update the count down every 1 second
+			var x = setInterval(function() {
 
-			// Get today's date and time
-			var now = new Date().getTime();
-				
-			// Find the distance between now and the count down date
-			var distance = countDownDate - now;
-				
-			// Time calculations for hours, minutes and seconds
-			var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-			var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-			var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-				
-			// Output the result in an element with id="demo"
-			document.getElementById("demo").innerHTML = hours + "h "
-			+ minutes + "m " + seconds + "s";
-				
-			// If the count down is over, write some text 
-			if (distance < 0) {
-				clearInterval(x);
-				document.getElementById("demo").innerHTML = "EXPIRED";
-			}
-		}, 1000);
-	</script>
+				// Get today's date and time
+				var now = new Date().getTime();
+					
+				// Find the distance between now and the count down date
+				var distance = countDownDate - now;
+					
+				// Time calculations for hours, minutes and seconds
+				var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+				var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+				var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+					
+				// Output the result in an element with id="demo"
+				document.getElementById("demo").innerHTML = hours + "h "
+				+ minutes + "m " + seconds + "s";
+					
+				// If the count down is over, write some text 
+				if (distance < 0) {
+					clearInterval(x);
+					document.getElementById("demo").innerHTML = "EXPIRED";
+				}
+			}, 1000);
+		</script> -->
 
-	
 		<%- include('./partials/footer.ejs') %>
 	
 	</body>
