--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,50 +1,32 @@
 <link href="/footer.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-<footer class="footer">
+<footer>
 	<div class="container">
 		<div class="row">
-			<div class="footer-col">
-			<h4>company</h4>
-			<ul>
-				<li><a href="#">about us</a></li>
-				<li><a href="#">our services</a></li>
-				<li><a href="#">privacy policy</a></li>
-				<li><a href="#">affiliate program</a></li>
+			<div class="col-md-6">
+			<h4>About Us</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			<ul class="social-icons">
+				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+				<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+				<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 			</ul>
 			</div>
-			<div class="footer-col">
-			<h4>get help</h4>
+			<div class="col-md-6">
+			<h4>Contact Us</h4>
 			<ul>
-				<li><a href="#">FAQ</a></li>
-				<li><a href="#">shipping</a></li>
-				<li><a href="#">returns</a></li>
-				<li><a href="#">order status</a></li>
-				<li><a href="#">payment options</a></li>
+				<li><i class="fa fa-map-marker"></i> 123 Main St, Anytown USA</li>
+				<li><i class="fa fa-phone"></i> 555-555-5555</li>
+				<li><i class="fa fa-envelope"></i> info@mysite.com</li>
 			</ul>
-			</div>
-			<div class="footer-col">
-			<h4>online shop</h4>
-			<ul>
-				<li><a href="#">watch</a></li>
-				<li><a href="#">bag</a></li>
-				<li><a href="#">shoes</a></li>
-				<li><a href="#">dress</a></li>
-			</ul>
-			</div>
-			<div class="footer-col">
-				<h4>follow us</h4>
-				<div class="social-links">
-					<a href="#"><i class="fab fa-facebook-f"></i></a>
-					<a href="#"><i class="fab fa-twitter"></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></a>
-					<a href="#"><i class="fab fa-linkedin-in"></i></a>
-				</div>
 			</div>
 		</div>
 	</div>
 </footer>
-
-</body>
+  
+  
 </html>
