--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
 
 
 <div class="topnav" id="myTopnav">
-	<a href="/home">Home</a>
+	<a href="/">Home</a>
 	<a href="/categories">Categories</a>
 	<a href="/contact">Contact</a>
 	<a href="javascript:void(0);" class="icon" onclick="myFunction()">
