--- a/views/newproduct.ejs
+++ b/views/newproduct.ejs
@@ -48,8 +48,8 @@
 		const prodPrice = document.getElementById('prodPrice').value;
 		const prodYear = document.getElementById('prodYear').value;
 
-		console.log(window.location.href);
-		console.log(window.location.href + '/addProduct');
+		// console.log(window.location.href);
+		// console.log(window.location.href + '/addProduct');
 
 
 		try {
