Add: all products and specific product page Update: DB and categories

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -20,6 +20,8 @@
 				try {
 					const response = await fetch('/categories/all');
 					const categories = await response.json();
+
+					//console.log(categories);
 		
 					const categoriesContainer = document.getElementById('categories-container');
 					
