--- a/views/products.ejs
+++ b/views/products.ejs
@@ -24,24 +24,30 @@
 			
 		</div>
 
-		<div class="grid-container">
-			<div class="grid-item">1</div>
-			<div class="grid-item">2</div>
-			<div class="grid-item">3</div>
-			<div class="grid-item">4</div>
-			<div class="grid-item">5</div>
-			<div class="grid-item">6</div>
-			<div class="grid-item">7</div>
-			<div class="grid-item">8</div>
-			<div class="grid-item">9</div>
-		</div>
-
 	
 		<%- include('./partials/footer.ejs') %>
 	
 	</body>
 
 	<script>
+
+		async function getBrandFilters() 
+		{
+			// Fetch categories from the server and render them on the page
+			
+			try {
+				const response = await fetch('/products/brands');
+				const brands = await response.json();
+
+				console.log(brands);
+	
+			} catch (error) {
+				console.error('Error fetching categories:', error);
+			}
+		}
+
+
+
 		function myFunction() 
 		{
 			var ScheckBox = document.getElementById("SamsungFilter");
@@ -63,6 +69,11 @@
 				Xtext.style.display = "none";
 			}
 		}
+
+
+
+		// Call the function to fetch and display categories when the page loads
+		getBrandFilters();
 	</script>
 
 </html>
