Update: - create new nav bar and footer - add search box - align everything in center

--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,6 +1,6 @@
-<link href="/categories.css" rel="stylesheet" type="text/css">
-
 <html>
+	<link href="/categories.css" rel="stylesheet" type="text/css">
+
 	
 	<%- include('./partials/header.ejs') %>
 	<body>
@@ -10,6 +10,23 @@
 		<br><br><br>
 		<div class="categories-container" id="categories-container">
 			<!-- Categories will be added here dynamically -->
+
+			<section class="index-category">
+				<p>Categories</p>
+
+				<a href="" class="index-category-box">
+					<div class="dark-overlay"></div>
+					<h3>Electronics</h3>
+				</a>
+				<a href="" class="index-category-box">
+					<div class="dark-overlay"></div>
+					<h3>Cars & Moto</h3>
+				</a>
+				<a href="" class="index-category-box">
+					<div class="dark-overlay"></div>
+					<h3>Medical</h3>
+				</a>
+			</section>
 		</div>
 
 		<br><br><br>
