--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,24 +1,31 @@
 <html>
-	
+
+
+	<link href="/home.css" rel="stylesheet" type="text/css">
 	<%- include('./partials/header.ejs') %>
 	<body>
-
+		
 		<%- include('./partials/nav.ejs') %>
-	   
-		<br>
 
-		<div style="padding:0 16px;">
-			<h2>Responsive Topnav Example</h2>
-			<p>This example use media queries to stack the topnav vertically when the screen size is 600px or less.</p>
-			<p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
-			<h4>Resize the browser window to see the effect.</h4>
+		<div class="home">
+			<br>
 
-			<img src="https://images.vans.com/is/image/VansEU/VN0A3WMAVNE-HERO?$PDP-FULL-IMAGE$">
-		  </div>
+			
 
-		<br><br>
+			<br>
 
-		<div class="best-offers">
+			<div id="deal_of_the_day">
+				<img src="https://images.vans.com/is/image/VansEU/VN0A3WMAVNE-HERO?$PDP-FULL-IMAGE$">
+			</div>
+
+			<br>
+
+			
+			
+			<br><br>
+		</div>
+
+		<!-- <div class="best-offers">
 			<h3>Προϊόντα σε προσφορά</h3>
 			
 			<ul class="shelf-with-offers">
@@ -51,9 +58,9 @@
 						</div>
 					</a>
 				</li>
-			</ul>    
+			</ul>
 			
-		</div>
+		</div> -->
 
 		<!-- <script>
 			// Set the date we're counting down to
