--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,4 @@
 <link href="/footer.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 <footer>
@@ -10,18 +8,18 @@
 			<h4>About Us</h4>
 			<p>It is important to take care of the patient, to be followed by the patient, but it will happen at such a time that there is a lot of work and pain.</p>
 			<ul class="social-icons">
-				<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-				<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-				<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+				<li><a href="#" class="fa-brands fa-facebook-f"></a></li>
+				<li><a href="#" class="fa-brands fa-twitter"></a></li>
+				<li><a href="#" class="fa-brands fa-instagram"></a></li>
+				<li><a href="#" class="fa-brands fa-linkedin"></a></li>
 			</ul>
 			</div>
 			<div class="col-md-6">
 			<h4>Contact Us</h4>
 			<ul>
-				<li><i class="fa fa-map-marker"></i> 123 Main St, Anytown USA</li>
-				<li><i class="fa fa-phone"></i> 555-555-5555</li>
-				<li><i class="fa fa-envelope"></i> info@mysite.com</li>
+				<li><a href="https://goo.gl/maps/4u27q9cVGe6NgufS6" target="_blank" class="fa fa-map-marker"></a> Λεωφ. Βασιλίσσης Αμαλίας 133, Αθήνα 105 57</li>
+				<li><a href="tel:+302102102102" class="fa fa-phone"></a> +30 2102102102</li>
+				<li><a href="mailto:skrnodemail@gmail.com" class="fa fa-envelope"></a> skrnodemail@gmail.com</li>
 			</ul>
 			</div>
 		</div>
