--- a/views/style/categories.css
+++ b/views/style/categories.css
@@ -1,39 +1,75 @@
-/* body {
-	font-family: 'Arial', sans-serif;
-	background-color: #f4f4f4;
-	margin: 0;
-	padding: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-}
-
 .categories-container {
-	max-width: 800px;
+	text-align: center;
+	margin: auto;
+}
+
+h3 {
+	font-size: 26px;
+	line-height: 32px;
+	color: #fff;
+	font-family: Roboto;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+
+.index-category {
 	width: 100%;
-	background-color: #fff;
-	border-radius: 8px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	padding: 20px;
-	box-sizing: border-box;
-}
-
-.category {
+	padding: 60px 0;
 	display: flex;
+	justify-content: center;
+	column-gap: 20px;
+	flex-wrap: wrap;
+}
+
+.index-category p {
+	color: #111;
+	text-align: center;
+	padding-bottom: 40px;
+	flex-basis: 100%;
+	text-transform: uppercase;
+	font-size: 28px;
+}
+
+.index-category-box {
+	width: 200px;
+	height: 200px;
+	background-color: #111;
+	background-repeat: no-repeat;
+	background-size: cover;
+	display: flex;
+	justify-content: center;
 	align-items: center;
-	justify-content: space-between;
-	padding: 15px;
-	border-bottom: 1px solid #ddd;
-	cursor: pointer;
-	transition: background-color 0.3s;
+	position: relative;
 }
 
-.category:hover {
-	background-color: #f9f9f9;
+.index-category-box:nth-child(2) {
+	background-image: url("https://t4.ftcdn.net/jpg/00/04/50/99/360_F_4509904_IvHNfxJ3HX2RyCrn7FK6JfFepupYd2wl.jpg");
 }
 
-.category-name {
-	font-size: 18px;
-	color: #333;
-} */
+.index-category-box:nth-child(3) {
+	background-image: url("https://www.webbikeworld.com/wp-content/uploads/2014/07/Mercedes-and-MV-Agusta.jpg");
+}
+
+.dark-overlay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: #000;
+	opacity: 0.5;
+	transition: all ease-in-out 200ms;
+}
+
+.index-category-box:hover .dark-overlay {
+	opacity: 0;
+}
+
+.index-category-box h3 {
+	font-size: 22px;
+	line-height: 28px;
+	text-align: center;
+	text-shadow: -2px 2px 4px #000;
+	z-index: 100;
+}
