--- a/views/style/contact.css
+++ b/views/style/contact.css
@@ -50,6 +50,7 @@
 	font-size: 30px;
 }
 
+
 .container .contactInfo .box .text {
 	display: flex;
 	font-size: 16px;
@@ -60,12 +61,11 @@
 
 .container .contactInfo .box .text h3 {
 	font-weight: 500;
-	color: cadetblue;
+	color: rebeccapurple;
 }
 
-
 .contact {
-	background-color: rgb(241, 240, 236);
+	background: rgba(255, 255, 255, 0.2);
 }
 
 .cont-form {
@@ -76,7 +76,7 @@
 
 .container .contactInfo .box .icon a {
 	display: flex;
-	color: rgb(61, 79, 160);
+	color: #7c1919d7;
 	text-decoration: none;
 	font-weight: bold;
 	margin: 10px 8px;
@@ -91,4 +91,42 @@
 .shelf-with-offers a:hover {
 	color: rgb(0, 0, 0);
 	text-decoration: none;
+}
+
+
+input {
+	height: 20px;
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	/* margin-top: 6px;
+	margin-bottom: 16px; */
+	resize: vertical;
+}
+
+textarea {
+	height: 100px;
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+}
+
+.submitButton {
+	background-color: #04AA6D;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.submitButton:hover {
+	background-color: #45a049;
 }
