--- a/views/style/nav_bar.css
+++ b/views/style/nav_bar.css
@@ -1,64 +1,199 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: Arial, sans-serif;
+}
+
 body {
-	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
-	align-items: center;
-	margin: 0;
+	height: 100vh;
+	background-color: black;
+	background-image: url('https://images.unsplash.com/photo-1485470733090-0aae1788d5af?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1517&q=80');
+	background-size: cover;
+	background-position: center;
 }
 
-.topnav {
-	overflow: hidden;
-	background-color: #333;
+li {
+	list-style: none;
 }
 
-.topnav a {
-	float: left;
-	display: block;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 14px 16px;
+a {
 	text-decoration: none;
-	font-size: 17px;
+	color: #fff;
+	font-size: 1rem;
 }
 
-.topnav a:hover {
-	background-color: #ddd;
-	color: black;
+a:hover {
+	color: #7c1919d7;
+	text-decoration: none;
 }
 
-.topnav a.active {
-	background-color: #a55818;
-	color: white;
+header {
+	position: relative;
+	padding: 0 2rem;
 }
 
-.topnav .icon {
+.navbar {
+	width: 100%;
+	height: 60px;
+	max-width: 1200px;
+	font-size: 25px;
+	font-weight: bold;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.navbar .logo a {
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+
+.navbar .links {
+	display: flex;
+	gap: 2rem;
+}
+
+.navbar .toggle_btn {
+	color: #fff;
+	font-size: 1.5rem;
+	cursor: pointer;
 	display: none;
 }
 
-@media screen and (max-width: 600px) {
-	.topnav a:not(:first-child) {
+.action_btn {
+	background-color: #7c1919d7;
+	color: #fff;
+	padding: 0.5rem 1rem;
+	border: none;
+	outline: none;
+	border-radius: 20px;
+	font-size: 0.8rem;
+	font-weight: bold;
+	cursor: pointer;
+	transition: scale 0.2 ease;
+}
+
+.action_btn:hover {
+	scale: 1.05;
+	color: #fff;
+}
+
+.action_btn:active {
+	scale: 0.95;
+}
+
+/* DROPDOWN MENU */
+.dropdown_menu {
+	display: none;
+	position: absolute;
+	right: 2rem;
+	top: 60px;
+	height: 0;
+	width: 300px;
+	background: rgba(255, 255, 255, 0.1);
+	backdrop-filter: blur(15px);
+	border-radius: 10px;
+	overflow: hidden;
+	transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown_menu.open {
+	height: 240px;
+}
+
+.dropdown_menu li {
+	padding: 0.7rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.dropdown_menu .action_btn {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+/* RESPONSIVE */
+@media (max-width: 992px) {
+	.navbar .links,
+	.navbar .action_btn {
 		display: none;
 	}
 
-	.topnav a.icon {
-		float: right;
+	.navbar .toggle_btn {
+		display: block;
+	}
+	
+	.dropdown_menu {
 		display: block;
 	}
 }
 
-@media screen and (max-width: 600px) {
-	.topnav.responsive {
-		position: relative;
+@media (max-width: 576px) {
+	.dropdown_menu {
+		left: 2rem;
+		width: unset;
 	}
 
-	.topnav.responsive .icon {
-		position: absolute;
-		right: 0;
-		top: 0;
-	}
-
-	.topnav.responsive a {
-		float: none;
-		display: block;
-		text-align: left;
-	}
 }
+
+
+
+.search {
+	width: 40%;
+	display: flex;
+	text-align: center;
+	margin: auto;
+}
+
+.searchTerm {
+	font-size: 20;
+	width: 100%;
+	border: solid #7c1919d7;
+	border-right: none;
+	border-left: none;
+	padding: 5px;
+	height: 46px;
+	outline: none;
+}
+
+.searchTerm:focus{
+	color: #7c1919d7;
+}
+
+.listButton {
+	color: #fff;
+	width: 60px;
+	height: 46px;
+	padding: 0px;
+	border: 1px solid #7c1919d7;
+	background: #7c1919d7;
+	text-align: center;
+	border-radius: 0 5px 5px 0;
+	cursor: pointer;
+	font-size: 20px;
+}
+
+.searchButton {
+	width: 60px;
+	height: 46px;
+	border: 1px solid #7c1919d7;
+	background: #7c1919d7;
+	text-align: center;
+	color: #fff;
+	border-radius: 5px 0 0 5px;
+	cursor: pointer;
+	font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+/* .wrap {
+	width: 30%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+} */
