--- a/views/style/categories.css
+++ b/views/style/categories.css
@@ -51,6 +51,22 @@ h3 {
 	background-image: url("https://www.webbikeworld.com/wp-content/uploads/2014/07/Mercedes-and-MV-Agusta.jpg");
 }
 
+.index-category-box:nth-child(4) {
+	background-image: url("https://t4.ftcdn.net/jpg/00/04/50/99/360_F_4509904_IvHNfxJ3HX2RyCrn7FK6JfFepupYd2wl.jpg");
+}
+
+.index-category-box:nth-child(5) {
+	background-image: url("https://www.webbikeworld.com/wp-content/uploads/2014/07/Mercedes-and-MV-Agusta.jpg");
+}
+.index-category-box:nth-child(6) {
+	background-image: url("https://t4.ftcdn.net/jpg/00/04/50/99/360_F_4509904_IvHNfxJ3HX2RyCrn7FK6JfFepupYd2wl.jpg");
+}
+
+.index-category-box:nth-child(7) {
+	background-image: url("https://www.webbikeworld.com/wp-content/uploads/2014/07/Mercedes-and-MV-Agusta.jpg");
+}
+
+
 .dark-overlay {
 	position: absolute;
 	top: 0;
