--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,7 @@
 
 <header>
 	<div class="navbar">
-		<div class="logo"><a href="/">NodeSkroutz</a></div>
+		<div class="logo"><a href="/">BudgetBuddy</a></div>
 		<ul class="links">
 			<li><a href="/">Home</a></li>
 			<li><a href="/categories">Categories</a></li>
@@ -31,7 +31,7 @@
 
 		<input type="text" class="searchTerm" placeholder="What are you looking for?">
 		
-		<button type="submit" class="listButton" onclick="showCategories()"></button>
+		<button type="submit" class="listButton" onclick="showCategories()">
 			<i class="fa-solid fa-list"></i>
 		</button>
 	</div>
