--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,8 +1,9 @@
 <html>
-	<link href="/categories.css" rel="stylesheet" type="text/css">
+	
 
 	
 	<%- include('./partials/header.ejs') %>
+	<link href="/categories.css" rel="stylesheet" type="text/css">
 	<body>
 
 		<%- include('./partials/nav.ejs') %>
@@ -38,24 +39,25 @@
 					const response = await fetch('/categories/all');
 					const categories = await response.json();
 
-					//console.log(categories);
 		
 					const categoriesContainer = document.getElementById('index-category');
-					
+
 					
 					// Render categories dynamically
 					categories.forEach(category => {
-
 
 						const categoryDiv = document.createElement('a');
 
 						categoryDiv.href = window.location.href + "/" + `${category.categoryname}`;
 
-						categoryDiv.classList.add('index-category-box');
+						categoryDivBox = categoryDiv.classList.add('index-category-box');
+
+						categoryDiv.style.backgroundImage = `url(${category.imageurl})`; // Set background image
 
 						categoryDiv.innerHTML = `<div class="dark-overlay"></div><h3>${category.categoryname}</h3>`;
 
 						categoriesContainer.appendChild(categoryDiv);
+
 					});
 				} catch (error) {
 					console.error('Error fetching categories:', error);
@@ -65,10 +67,6 @@
 			// Call the function to fetch and display categories when the page loads
 			fetchCategories();
 		</script>
-
-	   
-		<%- include('./partials/footer.ejs') %>
-	
 	</body>
-
-</html>
+	   
+<%- include('./partials/footer.ejs') %>
