--- a/views/style/home.css
+++ b/views/style/home.css
@@ -2,3 +2,13 @@
 	text-align: center;
 	margin: auto;
 }
+
+
+h2 {
+	font-size: 50px;
+	color: rgb(255, 255, 255);
+}
+
+h3 {
+	color: rgb(255, 255, 255);
+}
