--- a/views/style/nav_bar.css
+++ b/views/style/nav_bar.css
@@ -164,20 +164,20 @@ header {
 	color: #7c1919d7;
 }
 
-.listButton {
-	color: #fff;
+.searchButton {
 	width: 60px;
 	height: 46px;
-	padding: 0px;
 	border: 1px solid #7c1919d7;
 	background: #7c1919d7;
 	text-align: center;
-	border-radius: 0 5px 5px 0;
+	color: #fff;
+	border-radius: 5px 0 0 5px;
 	cursor: pointer;
 	font-size: 20px;
 }
 
-.searchButton {
+
+.listButton {
 	width: 60px;
 	height: 46px;
 	border: 1px solid #7c1919d7;
