--- a/views/products.ejs
+++ b/views/products.ejs
@@ -2,26 +2,16 @@
 	<%- include('./partials/header.ejs') %>
 
 	<body>
+		<link rel="stylesheet" type="text/css" href="/views/style/products.css">
 
 		<%- include('./partials/nav.ejs') %>
-		
 
-		<div class="Filters">
-			<div class="Maker">
-
-				<h3>Κατασκευαστής</h3>
-				<label for="myCheck"></label> 
-
-				<p id="Stext" style="display:none">Samsung is CHECKED!</p>
-				<input type="checkbox" id="SamsungFilter" onclick="myFunction()"> Samsung
-
-				<p id="Xtext" style="display:none">Xiaomi is CHECKED!</p>
-				<input type="checkbox" id="XiaomiFilter" onclick="myFunction()"> Xiaomi
-
-				
-			</div>
-			
-			
+		<div class="container">
+			<h1>Items List</h1>
+			<ul>
+				<li>Something Cool</li>
+				<li>Something More</li>
+			</ul>
 		</div>
 
 	
